Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2013-04-27 (SVN):
    * hexenworld, cl_parse.c (CL_CheckOrDownloadFile): use FS_FileExists
    * hexenworld, sv_ccmds.c (SV_Map_f): use FS_FileExists

2013-04-10 (SVN):
    * r_shared.h (MAXWIDTH): added a caution note that 12.20 fixed
      point math used in R_ScanEdges() overflows at width 2048, as
      noticed by Kevin Shanahan.

2013-04-10 (SVN):
    * oslibs: recompiled libogg-1.3.0 with patch from xiph.org svn rev.
      18758 applied.

2013-04-06 (SVN):
    * oslibs (macosx, windows): update opusfile builds using today's git
      repo version c9964275c152b34779ed56607c9f010efcb6a70f.

2013-04-02 (SVN):
    * gl_vidamiga.c, gl_vidnt.c, gl_vidsdl.c (VID_ConWidth): change mask
      to ~7 when making vid.conwidth a multiple of eight. (from tyrquake
      git repo.)

2013-04-02 (SVN):
    * keys.c (Key_Message): move backspace handling before non-printable
      check. (the functionality doesn't change. from tyrquake git repo.)

2013-03-30 (SVN):
    * scripts/ax_pthread.m4: update from mainstream savannah git repo.

2013-03-15 (1.5.6-final / SVN):
    * r_part.c (R_EntityParticles): fix undefined behavior in the loop
      init'ing avelocities, thanks to a -Waggressive-loop-optimizations
      warning from gcc-4.8.
    * update version date stamp to 2013-03-15.

2013-03-10 (SVN):
    * oslibs/dos/libwatt32: delete empty object files from the archive.

2013-03-10 (SVN):
    * gl_vidamiga.c: cleanups from Szilard Biro.

2013-03-10 (SVN):
    * pr_edict.c: if progs.dat exists, accept maplist.txt only if it is
      from the same game directory as progs.dat itself or if it is from
      a searchpath with a higher priority.

2013-03-10 (SVN):
    * [gl_|sv_]model.c: change the 'ignored' messages from external lit
      and ent files back to developer mode.

2013-03-10 (SVN):
    * update version date stamp to 2013-03-10.

2013-03-10 (SVN):