@@ -4,6 +4,10 @@ Development Progress	:
 ---------------------------
 
 2013-04-27 (SVN):
+    * h2patch/build_osx.sh: fixed make calls without -f Makefile.darwin
+      arguments. (they were harmless, but for correctness' sake.)
+
+2013-04-27 (SVN):
     * hexenworld, cl_parse.c (CL_CheckOrDownloadFile): use FS_FileExists
     * hexenworld, sv_ccmds.c (SV_Map_f): use FS_FileExists
 
